--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/dribbble.png"
-            alt="My LinkedIn profile"
+            src="./assets/behance.png"
+            alt="My Behance profile"
             class="icon"
-            onclick="window.open('https://dribbble.com/dotsic', '_blank')"
+            onclick="window.open('https://www.behance.net/dotsic/', '_blank')"
           />
           <img
             src="./assets/github.png"
