--- a/index.html
+++ b/index.html
@@ -270,24 +270,19 @@
             <div class="article-container">
               <img
                 src="./assets/project-1.png"
-                alt="Project 1"
+                alt="Hunter E-sports Livestream Layout"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Hunter E-sports Livestream Layout</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="window.open('https://github.com/', '_blank')"
               >
-                Github
+                Behance
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/', '_blank')"
-              >
-                Live Demo
-              </button>
+              
             </div>
           </div>
           <div class="details-container color-container">
