--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Hunter E-sports Livestream Layout</h2>
+            <h2 class="experience-sub-title project-title">Hunter E-sports</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/', '_blank')"
+                onclick="window.open('https://www.behance.net/gallery/201289777/Hunter-E-sports-Livestream-Layout', '_blank')"
               >
                 Behance
               </button>
