--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:contatodotsic@gmail.com">contatodotsic@gmail.com</a></p>
+          <p><a href="mailto:dotsic@outlook.com">dotsic@outlook.com</a></p>
         </div>
         <div class="contact-info-container">
           <!-- <img
